--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "root",
   "private": true,
+  "scripts": {
+    "dev:user": "npx lerna run start:dev --scope=user",
+    "dev:wallet": "npx lerna run start:dev --scope=wallet",
+    "dev": "concurrently \"npm run dev:user\" \"npm run dev:wallet\""
+  },
   "workspaces": [
     "apps/*",
     "libs/*"
   ],
-  "dependencies": {},
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "lerna": "^8.1.2"
   },
   "volta": {
